; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dce120/extr_dce120_timing_generator.c_dce120_timing_generator_enable_crtc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dce120/extr_dce120_timing_generator.c_dce120_timing_generator_enable_crtc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timing_generator = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (%struct.TYPE_4__*, i32, i32)* }
%struct.dce110_timing_generator = type { i32 }

@CRTC0_CRTC_MASTER_UPDATE_MODE = common dso_local global i32 0, align 4
@MASTER_UPDATE_MODE = common dso_local global i32 0, align 4
@CRTC0_CRTC_MASTER_UPDATE_LOCK = common dso_local global i32 0, align 4
@UNDERFLOW_UPDATE_LOCK = common dso_local global i32 0, align 4
@BP_RESULT_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dce120_timing_generator_enable_crtc(%struct.timing_generator* %0) #0 {
  %2 = alloca %struct.timing_generator*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.dce110_timing_generator*, align 8
  store %struct.timing_generator* %0, %struct.timing_generator** %2, align 8
  %5 = load %struct.timing_generator*, %struct.timing_generator** %2, align 8
  %6 = call %struct.dce110_timing_generator* @DCE110TG_FROM_TG(%struct.timing_generator* %5)
  store %struct.dce110_timing_generator* %6, %struct.dce110_timing_generator** %4, align 8
  %7 = load i32, i32* @CRTC0_CRTC_MASTER_UPDATE_MODE, align 4
  %8 = load i32, i32* @MASTER_UPDATE_MODE, align 4
  %9 = call i32 @CRTC_REG_UPDATE(i32 %7, i32 %8, i32 0)
  %10 = load i32, i32* @CRTC0_CRTC_MASTER_UPDATE_LOCK, align 4
  %11 = load i32, i32* @UNDERFLOW_UPDATE_LOCK, align 4
  %12 = call i32 @CRTC_REG_UPDATE(i32 %10, i32 %11, i32 0)
  %13 = load %struct.timing_generator*, %struct.timing_generator** %2, align 8
  %14 = getelementptr inbounds %struct.timing_generator, %struct.timing_generator* %13, i32 0, i32 0
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32 (%struct.TYPE_4__*, i32, i32)*, i32 (%struct.TYPE_4__*, i32, i32)** %18, align 8
  %20 = load %struct.timing_generator*, %struct.timing_generator** %2, align 8
  %21 = getelementptr inbounds %struct.timing_generator, %struct.timing_generator* %20, i32 0, i32 0
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %21, align 8
  %23 = load %struct.dce110_timing_generator*, %struct.dce110_timing_generator** %4, align 8
  %24 = getelementptr inbounds %struct.dce110_timing_generator, %struct.dce110_timing_generator* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 %19(%struct.TYPE_4__* %22, i32 %25, i32 1)
  store i32 %26, i32* %3, align 4
  %27 = load i32, i32* %3, align 4
  %28 = load i32, i32* @BP_RESULT_OK, align 4
  %29 = icmp eq i32 %27, %28
  %30 = zext i1 %29 to i32
  ret i32 %30
}

declare dso_local %struct.dce110_timing_generator* @DCE110TG_FROM_TG(%struct.timing_generator*) #1

declare dso_local i32 @CRTC_REG_UPDATE(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
